--- a/_posts/2021-02-24-Farisani.md
+++ b/_posts/2021-02-24-Farisani.md
@@ -4,19 +4,27 @@ Title: "Farisani first blog post on visual studio code"
 Date: "2021-02-24"
 ---
 
+
 # What I learnt on wednesday 24 2021
 So I have aleady started with javascript coding and I am currently doing cards counting using switch statements.
 
 ## Nesting for loops
 For a multi-dimensional array, if we want to access every element inside the array then we need to use nested for loops to go through all the entries of the array.
 
-## Do while loop
+## Using the Do while loop
 This type of loop is called a do...while loop because it will first do one pass of the code inside the loop before going through the command statement, and then continue to run the loop while the specified condition evaluates to true.
 
-## Replace loops by using recursion
+## Replacing loops by using recursion
 Recursion is the concept that a function can be expressed in terms of itself. Instead of writing a loop, an if statement might be useful.
 
-## Profile Lookup
+## Accessing values in arrays by using double for loops
 Here we learnt about manipulating people's information stored inside arrays.
 
-## 
+## Generating a Random Whole Numbers with JavaScript
+This is where we use the built in function  Math.random() to generate random numbers between 0 and 1.
+
+## Generating a Random Whole Numbers with JavaScript
+Learnt how to use Math.floor() to convert decimal numbers into whole numbers.
+
+## Generating a Random Whole Numbers within a Range
+
