This is an update of the javacode

--- a/_posts/2021-02-25-Farisani.md
+++ b/_posts/2021-02-25-Farisani.md
@@ -4,8 +4,23 @@ Title: "Farisani first blog post on visual studio code"
 Date: "2021-02-24"
 ---
 
-
 # Introduction
 Welcome to another edisode of learning with Farisani. So today we will be doing a lot of Javascript which include how to use for loops, while loops and if statements.
 
 ## Generate Random Whole Numbers within a Range
+Here we learnt about generating a whole number which is between two numbers stated as myMin and myMax. We used a function and created a while loop which generates random numbers until a number between the myMin and myMax is generated. The function will not stop running until all the random numbers generated meet the requirements needed. 
+
+'''function randomRange(myMin, myMax) {
+  // Only change code below this line
+  var testCondition = "false";
+  var generateRandom = 0;
+  while(testCondition == "false"){
+    generateRandom = Math.floor(Math.random() * (myMax - myMin + 1)) + myMin;
+    if(generateRandom >= myMin && generateRandom <= myMax){
+      return generateRandom;
+      testCondition = "true";
+    }
+  }
+  // Only change code above this line
+}
+'''
