Uploading the blog for the date 2021-02-25

--- a/_posts/2021-02-25-Farisani.md
+++ b/_posts/2021-02-25-Farisani.md
@@ -65,3 +65,5 @@ function findGreaterOrEqual(a, b) {
 '''js
 ## Using Recursion to Create a Countdown
 As we did earlier we stated that a recursion is when a function is called within itself 
+
+## Exploring the Differences Between the var and let Keywords
