Upload the first blog in march updated content

--- a/_posts/2021-03-01-Farisani.md
+++ b/_posts/2021-03-01-Farisani.md
@@ -15,3 +15,28 @@ The const keyword is used when the variable being defined will remain unchangabl
 
 ## Intriducing the Object.freeze() operator for const
 The Object.freeze() command can be used when we want the const defined keyword to remain const and also to become immutable.
+
+## Using the arrow function to write a Concise Annonnymous Function
+If we want to pass a function to another function then the function defined will not be used anywhere else in the code and the ES6 provides a simpler method of doing this. for example the function definition syntax can be changed from: 
+
+const myFunc = function() {
+  const myVar = "value";
+  return myVar;
+}
+
+to:
+
+const myFunc = () => {
+  const myVar = "value";
+  return myVar;
+}
+
+by using the arrow function 
+
+## Passing arguments into arrow function
+Just like the normal function, you can also pass arguments to arrow functions
+
+## Setting up default parameters for your function
+The default parameters are returned when a call is made to the funcion but no values are passed to the function.
+
+## 
