Upload the final blog for the first of march

--- a/_posts/2021-03-01-Farisani.md
+++ b/_posts/2021-03-01-Farisani.md
@@ -34,9 +34,17 @@ const myFunc = () => {
 by using the arrow function 
 
 ## Passing arguments into arrow function
-Just like the normal function, you can also pass arguments to arrow functions
+Just like the normal function, you can also pass arguments to arrow functions.
 
 ## Setting up default parameters for your function
 The default parameters are returned when a call is made to the funcion but no values are passed to the function.
+
+## Using the rest parameter with function parameters
+The rest parameter allows us to call any number of arguments into a function and still do the work on it.
+
+## Using the spread operator 
+The spread operator works with arrays and cannot be assigned to a variable if not inside an array.
+
+## Using Destructuring Assignment to Assign Variables from Objects
 
 ## 
